@@ -14,7 +14,7 @@
 	luasocket, rings, wsapi, xavante, xterm
 
 	Updated/fixed packages: berkeleydb, busybox, cdrkit, dash,
-	dialog, diffutils, distcc, dmalloc, fbv, file, gawk,
+	dialog, diffutils, distcc, dmalloc, dnsmasq, fbv, file, gawk,
 	gstreamer, gzip, intltool, ipsec-tools, iptables, libart,
 	libfuse, libgpg-error, libidn, liblockfile, links, lmbench,
 	lrzsz, make, module-init-tools, nbd, ncurses, netperf,
@@ -44,6 +44,7 @@
 	#1957: Bump sqlite to 3.6.23.1
 	#1987: intltool: Fix spelling mistake
 	#1999: Typo in path checking
+	#2005: Bump dnsmasq to 2.55 and migrate to gentargets
 	#2035: ipsec-tools-0.7.2 fails to build with gcc-4.4.x
 	#2038: Bump ncurses to 5.7
 	#2095: make gconfig: undefined reference to symbol 'dlsym@@GLIBC_2.2.5'
